# chromatic-matroids

./: .gitignore  README.md  chromatic-matroids.service  create_release.sh  deploy_frontend.sh  goals.txt  run.sh  run_frontend.sh
.github/workflows/: ci.yml  deploy-frontend.yml  release.yml
chromatic_matroids/: README.md  pyproject.toml
chromatic_matroids/examples/: dimention_computation.py  experimentation.py  matrix_computation_small.py
chromatic_matroids/issues/: README.md
chromatic_matroids/notebooks/: 00_unit_tests.ipynb
chromatic_matroids/notebooks/.ipynb_checkpoints/: 01_comprehensive_api_guide-checkpoint.ipynb  02_matrix_computation_examples-checkpoint.ipynb
chromatic_matroids/src/chromatic_matroids/: __init__.py  chromatic.py  chromatic_statistics_matorids.py  compositions.py  generate_matroids_utils.py  matrix_construction.py  matroids.py  ncquasisymmetric.py  quasisymmetric.py  setcompositions.py  stable_matroids_setcompositions.py
deploy/: bootstrap.sh  nginx-chromatic-matroids.conf
frontend/: app.py  operations.py  requirements.txt  routes.py  store.py  wsgi.py
frontend/static/: app.js  graph_editor.js  style.css
frontend/templates/: index.html
notebooks/: 00_unit_tests.ipynb  01_comprehensive_api_guide.ipynb  02_matrix_computation_examples.ipynb  03_min_max_conjecture_testing.ipynb
package/: README.md  pyproject.toml
package/issues/: README.md
package/src/chromatic_matroids/: __init__.py  chromatic_statistics_matorids.py  lattice_statistics.py  matroids.py  quasisymmetric.py
package/tests/: conftest.py  test_chromatic_polynomial.py  test_chromatic_statistics.py  test_compositions.py  test_generate_matroids_utils.py  test_lattice_statistics.py  test_matrix_construction.py  test_matroids.py  test_ncquasisymmetric.py  test_quasisymmetric.py  test_setcompositions.py  test_stable_matroids.py
