[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chromatic_matroids"
version = "0.0.2"
authors = [
  { name="Sophie Rehberg", email="" },
  { name="Raul Penaguiao", email="raul.penaguiao@proton.me" },
]
description = "A package that exposes some matroid operation and creations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/raulpenaguiao/chromatic-matroids/tree/main/chromatic_matroids"
Issues = "https://github.com/raulpenaguiao/chromatic-matroids/chromatic-matroids/issues"