[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chromatic_matroids"
version = "1.0.1"
authors = [
  { name="Raul Penaguiao", email="raul.penaguiao@proton.me" },
]
description = "A package that exposes some matroid operation and creations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/raulpenaguiao/chromatic-matroids/tree/main/package"
Issues = "https://github.com/raulpenaguiao/chromatic-matroids/tree/main/package/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chromatic_matroids"]

[project.optional-dependencies]
test = ["pytest", "numpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
